# FrogEngine

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.hpp  FrogEngine.hpp  Game.cpp  Game.hpp  GlfwManager.cpp  GlfwManager.hpp  IGame.hpp  ImGuiManager.hpp  README.md  ResourceManager.cpp  ResourceManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp  main.cpp
ext/box2D/: box2d.lib
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/glm/: CMakeLists.txt
ext/imgui/src/: imgui_demo.cpp  imgui_draw.cpp
games/animation_demo/: AnimationDemo.cpp  AnimationDemo.hpp  Zombie.cpp  Zombie.hpp
games/game_demo/: GameDemo.cpp  GameDemo.hpp  Zombie.cpp  Zombie.hpp
games/physics_demo/: MovablePlatform.hpp  PhysicsDemo.hpp  RopeSegment.hpp  Zombie.hpp
games/pong/: Paddle.cpp  Paddle.hpp  PongGame.cpp  PongGame.hpp
games/pong/components/: TestSpriteComponent.cpp  TestSpriteComponent.hpp
games/testgame/: Game.cpp  Game.hpp  TestObject.cpp  TestObject.hpp
games/testgame/components/: TestComponent.cpp  TestComponent.hpp
plantUML/: command.txt  command.txt.bak  main.puml  output.puml
resources/shaders/: animation.frag  fragment.glsl
resources/shaders/animation/: fragment.glsl
resources/shaders/line/: fragment.glsl
resources/shaders/shape/: vertex.glsl
resources/shaders/sprite/: vertex.glsl
src/: AnimatedSprite.cpp  AnimatedSprite.hpp  AnimationSettings.hpp  Behaviour.hpp  Body.cpp  Body.hpp  Box2DDebug.cpp  Box2DDebug.hpp  Camera.cpp  Camera.hpp  Colour.cpp  Colour.hpp  Component.hpp  Engine.cpp  Engine.hpp  FileUtils.hpp  FrogEngine.cpp  FrogEngine.hpp  GameObject.cpp  GameObject.hpp  GameTemplate.cpp  GameTemplate.hpp  GlfwManager.cpp  Input.cpp  Input.hpp  Key.hpp  MouseButton.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Settings.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  (+11 more)
src/components/: AnimatedSprite.cpp  AnimatedSprite.hpp  Sprite.cpp  Sprite.hpp
src/core/: AssetManager.cpp  AssetManager.hpp  Box2DDebug.cpp  Box2DDebug.hpp  Component.hpp  Engine.cpp  Engine.hpp  GameObject.cpp  GameObject.hpp  GameTemplate.hpp  Renderer.cpp  Renderer.hpp  Time.cpp  Time.hpp
src/data/: Colour.cpp  Colour.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/fileIO/: FileUtils.cpp  FileUtils.hpp
src/input/: Input.cpp  Input.hpp  Key.hpp  MouseButton.hpp
src/settings/: AnimationSettings.hpp  Settings.hpp  SpriteSettings.hpp
testgame/: Game.cpp  Game.hpp  TestObject.cpp  TestObject.hpp
testgame/Behaviours/: TestBehaviour.cpp  TestBehaviour.hpp
